--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "web-vitals": "^0.2.4",
     "yup": "^0.31.0"
   },
-  "proxy": "http://localhost:8888",
+  "proxy": "https://focus-network.herokuapp.com",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
