--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react-dom": "^16.9.9",
     "@types/react-redux": "^7.1.11",
     "@types/react-router-dom": "^5.1.6",
+    "@types/redux-saga": "^0.10.5",
     "@types/yup": "^0.29.9",
     "json-server": "^0.16.3",
     "node-sass": "^4.14.1",
@@ -25,6 +26,7 @@
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
+    "redux-saga": "^1.1.3",
     "typescript": "^4.0.5",
     "web-vitals": "^0.2.4",
     "yup": "^0.31.0"
