--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react-redux": "^7.1.11",
     "@types/react-router-dom": "^5.1.6",
     "@types/redux-saga": "^0.10.5",
+    "@types/reselect": "^2.2.0",
     "@types/yup": "^0.29.9",
     "json-server": "^0.16.3",
     "node-sass": "^4.14.1",
@@ -27,6 +28,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "redux-saga": "^1.1.3",
+    "reselect": "^4.0.0",
     "typescript": "^4.0.5",
     "web-vitals": "^0.2.4",
     "yup": "^0.31.0"
